HelloUltraviolet/Fixtures/RejectedSource/Expressions/OperatorOperandMismatch/Source/Main.uv
//! Rejected expression specimen for incompatible operator operands.

public procedure operatorOperandMismatchReference() -> i32 {
    return true + 1
}
